@@ -11,4 +11,5 @@ pod_coverage:
   # for either Class or method.
   private:
     - Alien::Build::MB#ACTION_code
+    - Alien::Build::MB#ACTION_test
 
